# rtslib-fb

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  Makefile  README  README.md  pyproject.toml  python-rtslib-fb.spec  rtslib_fb  rtslib_fb.py  setup.py
.github/workflows/: publish.yml
config/: rtslib.cfg
debian/: README.Debian  control  copyright  python-rtslib-fb.install  python-rtslib.dirs  python-rtslib.doc-base  python-rtslib.docs  python-rtslib.install  python-rtslib.postinst  python-rtslib.preinst  python-rtslib.prerm  python3-rtslib-fb.manpages  rtslib-doc.docs  rules
doc/: getting_started.md  saveconfig.json.5  targetctl.8
example-debian/: control  python-rtslib-fb-docs.doc-base  python3-rtslib-fb.install  rules
example-rpm/: python-rtslib.spec.tmpl
example/debian/: control  copyright  python3-rtslib-fb.target.init
fedora/: python-rtslib-fb.spec
policy/: backstore_fileio.lio  backstore_iblock.lio  backstore_pscsi.lio  backstore_ramdisk.lio  fabric_ib_srpt.lio  fabric_iscsi.lio  fabric_loopback.lio  fabric_qla2xxx.lio  fabric_tcm_fc.lio  fabric_vhost.lio  policy_rd_dr.lio  policy_rd_mcp.lio
redhat/: python-rtslib.spec.tmpl
rpm/: python-rtslib.spec.tmpl
rtslib/: __init__.py  alua.py  config.py  config_filters.py  config_live.py  config_parser.py  config_tree.py  fabric.py  fabrics.py  loop.py  node.py  root.py  target.py  targetctl.py  tcm.py  utils.py
rtslib/tcm/: __init__.py  block.py  file.py  pscsi.py  rdmcp.py  store.py
scripts/: convert-to-json  dbrootctl  rtslib-restoreconfig  rtslib-saveconfig  targetctl
specs/: README  example.spec.txt  example_spec_file_for_fabric_modules.txt  ib_srpt.spec  iscsi.spec  loopback.spec  qla2xxx.spec  sbp.spec  tcm_fc.spec  usb_gadget.spec  vhost.spec  writing_spec_files_for_fabric_modules.txt
systemd/: README.md
test/: test_config.py  test_config_parser.py  test_config_tree.py
test/data/: config_comments.lio  config_complete.ast  config_complete.lio  config_nested_blocks.ast  config_one_line.ast  config_strings.ast
tests/: __init__.py  test_backward_compatibility.py
tests/data/: config_attribute_group.ast  config_attribute_group.lio  config_basic.ast  config_basic.lio  config_comments.ast  config_complete.ast  config_complete.lio  config_invalid_reference.lio  config_nested_blocks.lio  config_one_line.lio  config_ramdisk_fileio_iscsi.lio  config_sample_1.lio  config_sample_2.lio  config_sample_3.lio  config_sample_4.lio  config_sample_5.lio  config_sample_6.lio  config_strings.lio
tests/safe/: test_config.py  test_config_parser.py
tests/system/: test_dump_restore.py
