[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "rtslib"
description = "API for Linux kernel SCSI target (aka LIO)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{email = "agrover@redhat.com", name = "Andy Grover"}]
maintainers = [{email = "mlombard@redhat.com", name = "Maurizio Lombardi"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyudev >= 0.16.1",
]
dynamic = ["version"]

[project.license-files]
paths = ["COPYING"]

[project.urls]
Homepage = "http://github.com/open-iscsi/rtslib-fb"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
    "ruff",
    "pre-commit",
]
